man-db (2.5.0-4) UNRELEASED; urgency=low

  * Add debconf translations:
    - Simplified Chinese (thanks, Ming Hua; closes: #447421).
    - Finnish (thanks, Esko Arajärvi; closes: #448769).
  * Update debconf translations:
    - Dutch (thanks, Bart Cornelis; closes: #447719).

 -- Colin Watson <cjwatson@debian.org>  Mon, 22 Oct 2007 20:46:43 +0100

man-db (2.5.0-3) unstable; urgency=low

  * Backport from upstream (closes: #446302):
    - Fix apropos/whatis segfault with explicitly specified locale.

 -- Colin Watson <cjwatson@debian.org>  Fri, 12 Oct 2007 10:29:46 +0100

man-db (2.5.0-2) unstable; urgency=low

  * Backport from upstream (closes: #446189):
    - Connect up the decompression pipeline in the display_to_stdout case
      too.

 -- Colin Watson <cjwatson@debian.org>  Thu, 11 Oct 2007 00:55:11 +0100

man-db (2.5.0-1) unstable; urgency=low

  * New upstream release.
    - Remove /usr/X11R6/man from MANDATORY_MANPATH (closes: #413349).
    - man now supports the MANPAGER environment variable, overriding PAGER.
    - Resolve ambiguous error message when asking for a nonexistent manual
      page that might also be a section name (closes: #421481).
    - MANSEC -> MANSECT in German man(1) and catman(8) (closes: #430635).
    - Truncate apropos/whatis output to the terminal width by default
      (closes: #411721).
    - lexgrog now ignores alleged manual page names containing spaces, as
      these usually indicate parsing errors or ill-formed NAME sections and
      they clutter up apropos output badly.
    - Discard stderr from formatting processes when outputting to a pager,
      to avoid visual corruption from any error messages (closes: #372939).
    - Disallow sectional extensions of alphabetic sections, e.g. n and l
      from the default configuration (closes: #391977), and sectional
      extensions beginning with a digit (closes: #421481).
    - Suppress warnings in --quiet mode (closes: #348008, #378428, #411220;