@@ -1,5 +1,6 @@
 man-db (2.5.0-4) UNRELEASED; urgency=low
 
+  * Always pass an appropriate --build= option to configure.
   * Add debconf translations:
     - Simplified Chinese (thanks, Ming Hua; closes: #447421).
     - Finnish (thanks, Esko Arajärvi; closes: #448769).
